banner section add

--- a/index.html
+++ b/index.html
@@ -46,34 +46,74 @@
                 </div>
             </div>
             <div class="main-right-sidebar">
-                <div class="header-top">
-                    <div class="search-bar">
-                        <div class="search">
-                            <input type="text" name="" placeholder="Search..">
-                            <span class="search-icon"><i class="uil uil-search"></i></span>
+                <div class="header-topbar">
+                    <div class="header-top">
+                        <div class="search-bar">
+                            <div class="search">
+                                <input type="text" name="" placeholder="Search..">
+                                <span class="search-icon"><i class="uil uil-search"></i></span>
+                            </div>
+                        </div>
+                        <div class="shopping-cart">
+                            <a href="#">
+                                <i class="uil uil-shopping-cart"></i> Cart (0)
+                            </a>
+                        </div>
+                        <div class="top-nav">
+                            <ul>
+                                <li>
+                                    <a href="#">
+                                        <span>My Account</span>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <span>Login</span>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </div>
-                    <div class="shopping-cart">
-                        <a href="#">
-                            <i class="uil uil-shopping-cart"></i> Cart (0)
-                        </a>
+                </div>
+                <div class="slider"><img src="./images/banner.jpg" alt=""></div>
+                <div class="banner-area">
+                    <div>
+                        <div class="banner-bar">
+                            <img class="image-hover" src="./images/img1.jpg" alt="">
+                            <div class="tooltip">
+                                <p><a href="#">Eid Collection</a></p>
+                                <p>Explore the collection</p>
+                            </div>
+                        </div>
                     </div>
-                    <div class="top-nav">
-                        <ul>
-                            <li>
-                                <a href="#">
-                                    <span>My Account</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <span>Login</span>
-                                </a>
-                            </li>
-                        </ul>
+                    <div>
+                        <div class="banner-bar">
+                            <img class="image-hover" src="./images/img2.jpg" alt="">
+                            <div class="tooltip">
+                                <p><a href="#">Women Mask</a></p>
+                                <p>Explore the collection</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="banner-bar">
+                            <img class="image-hover" src="./images/img3.jpg" alt="">
+                            <div class="tooltip">
+                                <p><a href="#">Women Sharee</a></p>
+                                <p>Explore the collection</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="banner-bar">
+                            <img class="image-hover" src="./images/img4.jpg" alt="">
+                            <div class="tooltip">
+                                <p><a href="#">Online Sale</a></p>
+                                <p>Explore the collection</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class="banner"><img src="./images/banner.jpg" alt=""></div>
             </div>
         </div>
         <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
