--- a/index.html
+++ b/index.html
@@ -114,6 +114,9 @@
                         </div>
                     </div>
                 </div>
+                <div class="single-banner">
+                    <img src="./images/img5.jpg" alt="">
+                </div>
             </div>
         </div>
         <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
