--- a/index.html
+++ b/index.html
@@ -76,46 +76,42 @@
                     </div>
                 </div>
                 <div class="slider"><img src="./images/banner.jpg" alt=""></div>
-                <div class="banner-area">
-                    <div>
+                <div class="banner-main">
+                    <div class="banner-area">
                         <div class="banner-bar">
-                            <img class="image-hover" src="./images/img1.jpg" alt="">
+                            <a href="#"><img class="image-hover" src="./images/img1.jpg" alt=""></a>
                             <div class="tooltip">
                                 <p><a href="#">Eid Collection</a></p>
                                 <p>Explore the collection</p>
                             </div>
                         </div>
-                    </div>
-                    <div>
                         <div class="banner-bar">
-                            <img class="image-hover" src="./images/img2.jpg" alt="">
+                            <a href="#"><img class="image-hover" src="./images/img2.jpg" alt=""></a>
                             <div class="tooltip">
                                 <p><a href="#">Women Mask</a></p>
                                 <p>Explore the collection</p>
                             </div>
                         </div>
                     </div>
-                    <div>
+                    <div class="banner-bar">
+                        <a href="#"><img class="image-hover" src="./images/img5.jpg" alt=""></a>
+                    </div>
+                    <div class="banner-area">
                         <div class="banner-bar">
-                            <img class="image-hover" src="./images/img3.jpg" alt="">
+                            <a href="#"><img class="image-hover" src="./images/img6.jpg" alt=""></a>
                             <div class="tooltip">
-                                <p><a href="#">Women Sharee</a></p>
+                                <p><a href="#">Men Collection</a></p>
+                                <p>Explore the collection</p>
+                            </div>
+                        </div>
+                        <div class="banner-bar">
+                            <a href="#"><img class="image-hover" src="./images/img7.jpg" alt=""></a>
+                            <div class="tooltip">
+                                <p><a href="#">Women Collection</a></p>
                                 <p>Explore the collection</p>
                             </div>
                         </div>
                     </div>
-                    <div>
-                        <div class="banner-bar">
-                            <img class="image-hover" src="./images/img4.jpg" alt="">
-                            <div class="tooltip">
-                                <p><a href="#">Online Sale</a></p>
-                                <p>Explore the collection</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="single-banner">
-                    <img src="./images/img5.jpg" alt="">
                 </div>
             </div>
         </div>
